various
add getLocal/World character api
fix Perspective.localToCanvas
add devtools plugin
-add camera debug
-add location debug
refactor deob